# rust-web-box

./: .gitignore  .gitkeep  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  crates.js  help.html  settings.html  src-files.js
changelog.d/: 20260311_translate_scripts_to_rust.md  20260413-ci-cd-best-practices.md  20260413_fix_cargo_token_fallback.md  20260413_fix_crates_io_check.md  20260413_fix_lookahead_regex.md  20260414_fix_per_commit_diff.md  20260415_fix_workspace_release_scripts.md  20260428_120000_web_box_foundation.md  20260428_213000_web_box_full_mvp.md  20260428_220000_web_box_full_vision.md  20260428_223000_web_box_workspace_fs.md  20260429_103000_web_box_terminal_crlf.md  20260429_171849_issue_3_pages_deploy_fix.md  20260429_181448_issue_5_cheerpx_vm_boot.md  20260429_202318_issue_7_coi_bootstrap.md  20260430_000000_issue_9_pages_disk_staging.md  20260430_052602_issue_11_quiet_workspace_prime.md  20260430_061723_issue_13_usable_web_box.md  20260501_060433_issue_15_real_e2e_tests.md  20260502_071344_issue_19_console_cleanup.md  20260502_103528_issue_21_workspace_sync.md  20260509_044903_issue_25_target_metadata.md  20260509_073000_issue_27_terminal_and_sync_regressions.md  20260509_203000_issue_29_target_refresh_and_command_save.md  20260510_110000_issue_31_repeated_cargo_run.md  20260527_093732_issue_33_remove_fake_branding.md  20260528_232400_issue_35_brave_warm_disk_retry.md  20260529_000000_issue_37_ux_parity.md  20260610_000000_issue_39_native_notifications.md  20260613_090000_issue_41_vm_performance.md  (+1 more)
docs/: architecture.md
src/: lib.rs  main.rs  (+1 more)
(+245 files in other folders)
